@@ -42,10 +42,12 @@
   <ItemGroup>
     <Compile Include="BindingEnvironmentTest.cs" />
     <Compile Include="CommandsTests.cs" />
+    <Compile Include="DynamicObjectTests.cs" />
     <Compile Include="ExpressionsTests.cs" />
     <Compile Include="FunctionTests.cs" />
     <Compile Include="MachineTests.cs" />
     <Compile Include="PredicatesTests.cs" />
+    <Compile Include="PrimitivesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeUtilitiesTests.cs" />
   </ItemGroup>
