@@ -54,7 +54,7 @@
     <Compile Include="Commands\ForEachCommand.cs" />
     <Compile Include="Commands\Function.cs" />
     <Compile Include="Commands\FunctionStatus.cs" />
-    <Compile Include="Commands\ICallable.cs" />
+    <Compile Include="Language\ICallable.cs" />
     <Compile Include="Commands\InvokeCommand.cs" />
     <Compile Include="Commands\ReturnCommand.cs" />
     <Compile Include="Commands\WhileCommand.cs" />
@@ -71,12 +71,14 @@
     <Compile Include="Expressions\InvokeExpression.cs" />
     <Compile Include="Expressions\NewExpression.cs" />
     <Compile Include="Expressions\OrExpression.cs" />
-    <Compile Include="Language\NotExpression.cs" />
+    <Compile Include="Expressions\NotExpression.cs" />
     <Compile Include="Expressions\IExpression.cs" />
     <Compile Include="Expressions\UnaryExpression.cs" />
     <Compile Include="Expressions\VariableExpression.cs" />
     <Compile Include="Language\ArithmeticOperator.cs" />
+    <Compile Include="Language\DynamicObject.cs" />
     <Compile Include="Language\ComparisonOperator.cs" />
+    <Compile Include="Language\IObject.cs" />
     <Compile Include="Machine.cs" />
     <Compile Include="Predicates.cs" />
     <Compile Include="Primitives\PrintLineSubroutine.cs" />
