@@ -2,6 +2,7 @@
 {
     using System;
     using System.Collections.Generic;
+    using System.IO;
     using System.Linq;
     using System.Text;
 
@@ -14,6 +15,10 @@
         private static Machine current;
 
         private BindingEnvironment environment = new BindingEnvironment();
+
+        private TextReader inreader = System.Console.In;
+        private TextWriter outwriter = System.Console.Out;
+        private TextWriter errwriter = System.Console.Error;
 
         public Machine()
             : this(true)
@@ -42,5 +47,31 @@
         public static Machine Current { get { return current; } }
 
         public BindingEnvironment Environment { get { return this.environment; } }
+
+        public TextReader In
+        {
+            get
+            {
+                return this.inreader;
+            }
+
+            set
+            {
+                this.inreader = value;
+            }
+        }
+
+        public TextWriter Out
+        {
+            get
+            {
+                return this.outwriter;
+            }
+
+            set
+            {
+                this.outwriter = value;
+            }
+        }
     }
 }
